--- a/topografiya/templates/login.html
+++ b/topografiya/templates/login.html
@@ -46,7 +46,7 @@
 
                                         {% else %}
                                             <div class="alert alert-success" style="background-color:#d4edda">
-                                                <b>Tabriklaymiz !</b> <span class="text text-success">{{ message }}</span>
+                                                <b>Поздравления  !</b> <span class="text text-success">{{ message }}</span>
                                             </div>
                                         {% endif %}
                                     {% endfor %}
